--- a/lectures/splines_rkhs/splines_rkhs.tex
+++ b/lectures/splines_rkhs/splines_rkhs.tex
@@ -769,11 +769,11 @@ How can this be? Let's go about this backwards, and start by explaining the very
 last part of the second point: suppose you were to (reasonably) insist that a 
 multivariate spline should be, like a univariate spline, a piecewise polynomial
 of a degree $k$ that is $C^{k-1}$, which means it has continuous derivatives of
-all orders less than $k$. Then in general this is going to be very tricky to
-fulfill in any dimension $d \geq 2$. This is essentially due to the explosion in 
-the number of constraints such continuity imposes. Recall that a $k\th$ degree 
-polynomial in $d$ dimensions is of the form (again using multi-index notation
-$\alpha = (\alpha_1,\dots,\alpha_d) \in \Z^d_+$):         
+all orders less than $k$. Then in general this is going to be tricky to fulfill
+when $d \geq 2$. This is essentially due to the number in the number of
+constraints such continuity imposes in the multivariate setting. Recall that a
+$k\th$ degree polynomial in $d$ dimensions is of the form (using multi-index
+notation $\alpha = (\alpha_1,\dots,\alpha_d) \in \Z^d_+$):            
 \begin{equation}
 \label{eq:poly}
 f(x) = \sum_{|\alpha| \leq k} \beta_\alpha \, x_1^{\alpha_1} x_2^{\alpha_2}
@@ -785,36 +785,50 @@ dinensions, is
 \[
 \sum_{\ell=0}^k {d-1+\ell \choose \ell} = {d + k \choose k}.
 \]
-Now let's just think about quadratic order $k=2$ in dimension $d=2$, and try to
-understand the claim that it's tricky to construct a $C^1$ piecewise quadratic, 
-where we'll consider the ``pieces'' to be triangles. Suppose that we have two 
-triangles sharing an edge $e$. Then on each triangle we have \smash{${4 \choose
-    2} = 6$} parameters to define the polynomial. Denoting by $f,g$ the
-polynomials on our two adjacent triangles, the spline condition says    
+Now let's just think about cubic order $k=3$ in dimension $d=2$, and try to 
+understand the claim that it's tricky to construct a $C^2$ piecewise cubic,
+where we'll consider the ``pieces'' to be triangles. In fact, it's already going
+to be hard enough to construct a $C^1$ piecewise cubic. Suppose that we have two 
+triangles sharing an edge $e$. Then on each triangle we have \smash{${5 \choose  
+    2} = 10$} parameters to define the cubic, and hence 20 parameters in
+total. Denoting by $f,g$ the two cubics on our adjacent triangles, the $C^1$
+condition says        
 \[
 D^\alpha f(x) = D^\alpha g(x), \quad \text{for all $|\alpha| \leq 1$ and all $x
   \in e$}. 
 \] 
-It can be shown that this reduces to \smash{${3 \choose 2} + {2 \choose 1} = 5$} 
-linear constraints on the coefficients. But this is just for one edge! Now
-imagine that there is a third triangle, and we have 3 adjacent edges, and 3 
-bivariate quadratics $f,g,h$. Then we have  
-\[
-6+6+6 = 18 \; \text{parameters, but} \; 5+5+5 = 15 \; \text{constraints},    
-\]
-which only leaves us 3 free parameters left in order to define our $C^1$
-piecewise quadratic. This is obviously not desirable. Moreover, it can be shown
-that the existence of completely ``free'' $C^r$ piecewise polynomial on a
-triangulation in $d$ dimensions requires its polynomial degree $q$ to satisfy  
-\[
-q \geq r(d+1) + d.
-\]
-When $r=1$ and $d=2$ the minimal degree 5; that is, we have to use a piecewise  
-quintic to get ``uninhibited'' $C^1$ smoothness, which seems terribly wasteful. 
+It can be shown that this reduces to 10 constraints on the coefficients; but
+importantly, the structure of these constraints is such that, for a given set of
+values at the vertices of the triangles, it is unclear whether there will exist
+a set of coefficients that satisfies the constraints \emph{and} meets the
+prescribed  values at the vertices. Figure \ref{fig:c1_poly} gives an
+illustration.      
 
-This is not a complete show-stopper for multivariate and the story is much
-richer than this but we'll not go in that direction. To learn more, some
-wonderful references are deBoor1,2,3, Schumaker Lai
+% even though there are 20 coefficients in total (from the two
+% cubics), it is not clear that 
+
+% the nature of these constraints is such it is not clear that they
+% have a solution a single coefficient 
+
+%  But this is just for one edge! Now  
+% imagine that there is a third triangle, and we have 3 adjacent edges, and 3 
+% bivariate quadratics $f,g,h$. Then we have  
+% \[
+% 6+6+6 = 18 \; \text{parameters, but} \; 5+5+5 = 15 \; \text{constraints},    
+% \]
+% which only leaves us 3 free parameters left in order to define our $C^1$
+% piecewise quadratic. This is obviously not desirable. Moreover, it can be shown
+% that the existence of completely ``free'' $C^r$ piecewise polynomial on a
+% triangulation in $d$ dimensions requires its polynomial degree $q$ to satisfy  
+% \[
+% q \geq r(d+1) + d.
+% \]
+% When $r=1$ and $d=2$ the minimal degree 5; that is, we have to use a piecewise  
+% quintic to get ``uninhibited'' $C^1$ smoothness, which seems terribly wasteful. 
+
+% This is not a complete show-stopper for multivariate and the story is much
+% richer than this but we'll not go in that direction. To learn more, some
+% wonderful references are deBoor1,2,3, Schumaker Lai
 
 \subsection{Tensor product splines}
 
